--- a/src/style.css
+++ b/src/style.css
@@ -55,6 +55,16 @@ SOMETHING
     height: 650px;
   }
 
+  .resources-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    height: 100vh;
+    width: 80vw;
+  }
+
   /* 
 ====================================================
 TEXT STYLING
