--- a/src/style.css
+++ b/src/style.css
@@ -56,6 +56,28 @@
 SOMETHING 
 ====================================================
 */
+  .main-menu {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    height: 100vh;
+    width: 100vw;
+  }
+
+  .main-menu .image {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: 0;
+    opacity: 0.1;
+    top: 0;
+    left: 0;
+    filter: blur(2px);
+  }
+
+
   .img_main {
     width: auto;
     max-width: 300px;
@@ -64,7 +86,7 @@ SOMETHING
   }
 
   .content_box {
-    height: 650px;
+    height: 100%;
     width: 50%;
   }
 
@@ -83,6 +105,12 @@ SOMETHING
 TEXT STYLING
 ====================================================
 */
+
+  .title {
+    font-size: 40px;
+    font-weight: bold;
+    text-align: center;
+  } 
   .setting {
     padding: 150px 0px;
     width: auto;
@@ -106,7 +134,7 @@ TEXT STYLING
   /* ==================================================== */
   .dialogue_box {
     padding: 0px auto;
-    text-align: center;
+    text-align: justify;
     display: flex;
     flex-direction: column;
     align-items: center;
